--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     "react/": "https://esm.sh/react@^19.1.1/",
     "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
     "marked": "https://esm.sh/marked@^13.0.2",
-    "react-diff-viewer-continued": "https://esm.sh/react-diff-viewer-continued@^3.4.0"
+    "react-diff-viewer-continued": "https://esm.sh/react-diff-viewer-continued@^3.4.0",
+    "dompurify": "https://esm.sh/dompurify@^3.1.6"
   }
 }
 </script>
